Make percentiles less depressing

--- a/jira_agile_metrics/calculators/progressreport_template.html
+++ b/jira_agile_metrics/calculators/progressreport_template.html
@@ -245,7 +245,7 @@
                         <th scope="col" style="width: 15%">Deadline</th>
                         <th scope="col" style="width: 5%"></th>
                         {% endif %}
-                        <th scope="col" style="width: 20%">Forecast</th>
+                        <th scope="col" style="width: 20%">Forecast (week starting)</th>
                     </tr>
                 </thead>
                 <tbody>
