--- a/jira_agile_metrics/calculators/progressreport_template.html
+++ b/jira_agile_metrics/calculators/progressreport_template.html
@@ -1,4 +1,64 @@
 <!doctype html>
+{% macro epic_progress(epic) -%}
+    {% if epic.min_stories %}
+    <div class="progress" style="height: 30px">
+        <div class="progress-bar bg-{{ color_code(epic.forecast.deadline_quantile if epic.forecast else None) }}"
+            role="progressbar"
+            style="width: {{ percent_complete(epic) }}%"
+            aria-valuenow="{{ epic.stories_done }}"
+            aria-valuemin="0"
+            aria-valuemax="{{ epic.max_stories }}">
+                {{ epic.stories_done }}
+                of
+                {{ epic.min_stories }}
+                {% if epic.max_stories and epic.max_stories != epic.min_stories %} &ndash; {{ epic.max_stories }} {% endif %}
+                stories completed
+        </div>
+    </div>
+
+    <small class="d-none d-print-inline percent-complete">({{ percent_complete(epic) }}%)</small>
+
+    <a class="icon-link d-print-none" href="{{ jira_url }}/issues/?jql={{ epic.story_query | urlencode }}" target="_blank">
+        <i class="fas fa-search"></i>
+    </a>
+
+    {% if epic_charts[epic.key]['scatterplot'] %}
+    <a class="icon-link d-print-none perfundo__link" href="#epic-scatterplot-{{ epic.key | urlencode }}">
+        <i class="fas fa-chart-bar"></i>
+    </a>
+    {% endif %}
+    {% if epic_charts[epic.key]['cfd'] %}
+    <a class="icon-link d-print-none perfundo__link" href="#epic-cfd-{{ epic.key | urlencode }}">
+        <i class="fas fa-chart-area"></i>
+    </a>
+    {% endif %}
+
+    {% else %}
+    Forecast not available
+    {% endif %}
+{%- endmacro %}
+{% macro epic_forecast_percentile(epic) -%}
+    {% if epic.forecast %}
+        {% if epic.forecast.deadline_quantile is not none %}
+        <span class="badge badge-pill badge-{{ color_code(epic.forecast.deadline_quantile) }}">
+            {% if epic.forecast.deadline_quantile > 0.95 %}
+                > 95%
+            {% elif epic.forecast.deadline_quantile < 0.1 %}
+                < 10%
+            {% else %}
+                {{ (epic.forecast.deadline_quantile * 100) | round | int }}%
+            {% endif %}
+        </span>
+        {% endif %}
+    {% endif %}
+{%- endmacro %}
+{%- macro epic_forecast_dates(epic) %}
+    {% if epic.forecast %}
+        {% for quantile, weeks in epic.forecast.quantiles %}
+        <div><small>{{ future_date(weeks).strftime("%d %b %Y") }} <em>@ {{ (quantile * 100) | round | int }}%</em></small></div>
+        {% endfor %}
+    {% endif %}
+{%- endmacro %}
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -270,42 +330,7 @@
                                 <td><a class="epic-link" href="{{ jira_url }}/browse/{{ epic.key }}" target="_blank">{{ epic.key }}: {{ epic.summary }}</a></td>
                                 <td>{{ epic.team.name }}</td>
                                 <td>
-                                    {% if epic.min_stories %}
-                                    <div class="progress" style="height: 30px">
-                                        <div class="progress-bar bg-{{ color_code(epic.forecast.deadline_quantile if epic.forecast else None) }}"
-                                            role="progressbar"
-                                            style="width: {{ percent_complete(epic) }}%"
-                                            aria-valuenow="{{ epic.stories_done }}"
-                                            aria-valuemin="0"
-                                            aria-valuemax="{{ epic.max_stories }}">
-                                                {{ epic.stories_done }}
-                                                of
-                                                {{ epic.min_stories }}
-                                                {% if epic.max_stories and epic.max_stories != epic.min_stories %} &ndash; {{ epic.max_stories }} {% endif %}
-                                                stories completed
-                                        </div>
-                                    </div>
-
-                                    <small class="d-none d-print-inline percent-complete">({{ percent_complete(epic) }}%)</small>
-
-                                    <a class="icon-link d-print-none" href="{{ jira_url }}/issues/?jql={{ epic.story_query | urlencode }}" target="_blank">
-                                        <i class="fas fa-search"></i>
-                                    </a>
-
-                                    {% if epic_charts[epic.key]['scatterplot'] %}
-                                    <a class="icon-link d-print-none perfundo__link" href="#epic-scatterplot-{{ epic.key | urlencode }}">
-                                        <i class="fas fa-chart-bar"></i>
-                                    </a>
-                                    {% endif %}
-                                    {% if epic_charts[epic.key]['cfd'] %}
-                                    <a class="icon-link d-print-none perfundo__link" href="#epic-cfd-{{ epic.key | urlencode }}">
-                                        <i class="fas fa-chart-area"></i>
-                                    </a>
-                                    {% endif %}
-
-                                    {% else %}
-                                    Forecast not available
-                                    {% endif %}
+                                    {{ epic_progress(epic )}}
                                 </td>
                                 {% if epic_deadline_field %}
                                 <td>
@@ -316,27 +341,11 @@
                                     {% endif %}
                                 </td>
                                 <td>
-                                    {% if epic.forecast %}
-                                        {% if epic.forecast.deadline_quantile is not none %}
-                                        <span class="badge badge-pill badge-{{ color_code(epic.forecast.deadline_quantile) }}">
-                                            {% if epic.forecast.deadline_quantile > 0.95 %}
-                                                > 95%
-                                            {% elif epic.forecast.deadline_quantile < 0.1 %}
-                                                < 10%
-                                            {% else %}
-                                                {{ (epic.forecast.deadline_quantile * 100) | round | int }}%
-                                            {% endif %}
-                                        </span>
-                                        {% endif %}
-                                    {% endif %}
+                                    {{ epic_forecast_percentile(epic) }}
                                 </td>
                                 {% endif %}
                                 <td>
-                                    {% if epic.forecast %}
-                                        {% for quantile, weeks in epic.forecast.quantiles %}
-                                        <div><small>{{ future_date(weeks).strftime("%d %b %Y") }} <em>@ {{ (quantile * 100) | round | int }}%</em></small></div>
-                                        {% endfor %}
-                                    {% endif %}
+                                    {{ epic_forecast_dates(epic) }}
                                 </td>
                             </tr>
                             {% endfor %}
@@ -373,42 +382,7 @@
                                 <td><a class="epic-link" href="{{ jira_url }}/browse/{{ epic.key }}" target="_blank">{{ epic.key }}: {{ epic.summary }}</a></td>
                                 <td>{{ epic.outcome.name }}</td>
                                 <td>
-                                    {% if epic.min_stories %}
-                                    <div class="progress" style="height: 30px">
-                                        <div class="progress-bar bg-{{ color_code(epic.forecast.deadline_quantile if epic.forecast else None) }}"
-                                            role="progressbar"
-                                            style="width: {{ percent_complete(epic) }}%"
-                                            aria-valuenow="{{ epic.stories_done }}"
-                                            aria-valuemin="0"
-                                            aria-valuemax="{{ epic.max_stories }}">
-                                                {{ epic.stories_done }}
-                                                of
-                                                {{ epic.min_stories }}
-                                                {% if epic.max_stories and epic.max_stories != epic.min_stories %} &ndash; {{ epic.max_stories }} {% endif %}
-                                                stories completed
-                                        </div>
-                                    </div>
-
-                                    <small class="d-none d-print-inline percent-complete">({{ percent_complete(epic) }}%)</small>
-
-                                    <a class="icon-link d-print-none" href="{{ jira_url }}/issues/?jql={{ epic.story_query | urlencode }}" target="_blank">
-                                        <i class="fas fa-search"></i>
-                                    </a>
-
-                                    {% if epic_charts[epic.key]['scatterplot'] %}
-                                    <a class="icon-link d-print-none perfundo__link" href="#epic-scatterplot-{{ epic.key | urlencode }}">
-                                        <i class="fas fa-chart-bar"></i>
-                                    </a>
-                                    {% endif %}
-                                    {% if epic_charts[epic.key]['cfd'] %}
-                                    <a class="icon-link d-print-none perfundo__link" href="#epic-cfd-{{ epic.key | urlencode }}">
-                                        <i class="fas fa-chart-area"></i>
-                                    </a>
-                                    {% endif %}
-
-                                    {% else %}
-                                    Forecast not available
-                                    {% endif %}
+                                    {{ epic_progress(epic )}}
                                 </td>
                                 {% if epic_deadline_field %}
                                 <td>
@@ -419,27 +393,11 @@
                                     {% endif %}
                                 </td>
                                 <td>
-                                    {% if epic.forecast %}
-                                        {% if epic.forecast.deadline_quantile is not none %}
-                                        <span class="badge badge-pill badge-{{ color_code(epic.forecast.deadline_quantile) }}">
-                                            {% if epic.forecast.deadline_quantile > 0.95 %}
-                                                > 95%
-                                            {% elif epic.forecast.deadline_quantile < 0.1 %}
-                                                < 10%
-                                            {% else %}
-                                                {{ (epic.forecast.deadline_quantile * 100) | round | int }}%
-                                            {% endif %}
-                                        </span>
-                                        {% endif %}
-                                    {% endif %}
+                                    {{ epic_forecast_percentile(epic) }}
                                 </td>
                                 {% endif %}
                                 <td>
-                                    {% if epic.forecast %}
-                                        {% for quantile, weeks in epic.forecast.quantiles %}
-                                        <div><small>{{ future_date(weeks).strftime("%d %b %Y") }} <em>@ {{ (quantile * 100) | round | int }}%</em></small></div>
-                                        {% endfor %}
-                                    {% endif %}
+                                    {{ epic_forecast_dates(epic) }}
                                 </td>
                             </tr>
                             {% endfor %}
